// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builders should be able to generate correct ADF for example #0 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "My favourite emoji is ",
          "type": "text",
        },
        {
          "attrs": {
            "shortName": ":man_facepalming:",
            "text": "🤦‍♂️",
          },
          "type": "emoji",
        },
        {
          "text": " . What is yours?",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #1 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "Hello, World!",
          "type": "text",
        },
        {
          "text": " Look I can do",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "italic",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
            {
              "type": "em",
            },
          ],
          "text": ", strong ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
            {
              "type": "strong",
            },
            {
              "type": "em",
            },
          ],
          "text": "and underlined text!",
          "type": "text",
        },
        {
          "text": " and action mark and invalid action mark.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #2 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "Hi, my name is... My name is... My name is... My name is ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "1",
            "text": "@Oscar Wallhult",
          },
          "type": "mention",
        },
        {
          "text": " :D",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "2",
            "text": "@mention",
          },
          "type": "mention",
        },
        {
          "text": ". And this is a broken ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "mention",
            "text": "@unknown",
          },
          "type": "mention",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Mentions with generic ids ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "CONTAINER",
            "id": "here",
            "text": "@here",
          },
          "type": "mention",
        },
        {
          "text": " ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "CONTAINER",
            "id": "all",
            "text": "@all",
          },
          "type": "mention",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #3 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "shortName": ":grinning:",
            "text": "😀",
          },
          "type": "emoji",
        },
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "shortName": ":man_facepalming:",
            "text": "🤦‍♂️",
          },
          "type": "emoji",
        },
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "shortName": ":flag_ru:",
            "text": "🇷🇺",
          },
          "type": "emoji",
        },
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "shortName": ":wtf:",
            "text": ":wtf:",
          },
          "type": "emoji",
        },
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #4 1`] = `
{
  "content": [
    {
      "attrs": {},
      "content": [
        {
          "text": "some code",
          "type": "text",
        },
      ],
      "marks": [
        {
          "attrs": {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #5 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": [
        {
          "attrs": {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "world!",
          "type": "text",
        },
      ],
      "marks": [
        {
          "attrs": {
            "align": "end",
          },
          "type": "alignment",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #6 1`] = `
{
  "content": [
    {
      "content": [
        {
          "text": "hello",
          "type": "text",
        },
      ],
      "marks": [
        {
          "attrs": {
            "level": 1,
          },
          "type": "indentation",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "world!",
          "type": "text",
        },
      ],
      "marks": [
        {
          "attrs": {
            "level": 2,
          },
          "type": "indentation",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #7 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
      },
      "content": [
        {
          "attrs": {
            "collection": "SampleCollection",
            "id": "1234",
            "type": "file",
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Builders should be able to generate correct ADF for example #8 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
      },
      "content": [
        {
          "attrs": {
            "type": "external",
            "url": "data:image/svg+xml;base64,sampleBase64Image",
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;


exports[`Builders should be able to generate correct ADF for example #9 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
      },
      "content": [
        {
          "attrs": {
            "collection": "SampleCollection",
            "id": "1234",
            "type": "file",
          },
          "type": "media",
        },
      ],
      "marks": [
        {
          "attrs": {
            "href": "https://www.atlassian.com",
          },
          "type": "link",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

